-- 관리자가 설정한 매일 정해진 시각에 자동 발송되는 예약 푸시알림 테이블
CREATE TABLE IF NOT EXISTS notification_schedules (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    title VARCHAR(150) NOT NULL,
    subtitle VARCHAR(150) NOT NULL,
    send_time TIME NOT NULL,
    enabled BOOLEAN NOT NULL DEFAULT TRUE,
    last_sent_date DATE,
    created_at TIMESTAMP,
    updated_at TIMESTAMP
);
